--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,12 +26,15 @@ jobs:
         with:
           ref: master
 
+      - name: Setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '10.x'
+
       # Runs a single command using the runners shell
-      - name: Build and Deploy
-        run: echo Build and Deploy!
+      #- name: Build Project
+      #  run: yarn && yarn build
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Deploy
+        run: bash ./deploy.sh
