--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "author": "Neveryu",
   "license": "ISC",
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs"
   },
   "dependencies": {
-    "markdown-it-include": "^1.0.0",
-    "vuepress": "^0.14.2"
+    "markdown-it-include": "^1.0.0"
+  },
+  "devDependencies": {
+    "vuepress": "^1.8.2"
   }
 }
