--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,15 +22,23 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout master
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
         with:
           ref: master
+          persist-credentials: false
 
       - name: Setup node
         uses: actions/setup-node@v1
         with:
           node-version: '10.x'
 
+      - name: Install
+        run: yarn
+
+      - name: Setup env
+        env:
+          access_token: ${{ secrets.access_token }}
+          
       # Runs a single command using the runners shell
       #- name: Build Project
       #  run: yarn && yarn build
